# ft_linear_regression

./: bonus.py  predict.py  pyproject.toml  train.py
libs/: __init__.py  flags.py
libs/output/: __init__.py  snackbar.py
libs/slylearn/: __init__.py  sly_linear_regression.py
