[tool.poetry]
name = "ft_linear_regression"
version = "0.0.1"
description = ""
authors = ["slynell"]

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "^1.1.0"
pandas = "^1.2.4"
matplotlib = "^3.4.1"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
